fixed the from alignment

--- a/frontend/src/component/merchantDetails.module.css
+++ b/frontend/src/component/merchantDetails.module.css
@@ -1,3 +1,7 @@
+body {
+    margin: 5rem;
+}
+
 .formContainer {
     height: 100vh;
 }
@@ -5,64 +9,46 @@
 .container {
     height: 70vh;
     width: 70vw;
-    background: white;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-    align-content: center;
-    margin-left: 2rem;
-    border: 5px solid white;
-    border-radius: 10px;
-    margin-top: 25vh;
-    
+    background-color: whitesmoke;
+    list-style-type: none;
+    padding: 0;
+    border-radius: 3px;
+
 }
 
 .userContainer {
-    padding: 1rem;
     display: flex;
-    align-items: center;
+    justify-content: flex-end;
+    padding: .5em;
 }
 
-.label {
-    color: grey;
-    font-size: larger;
-   
-    text-align: start;
+.userContainer>label {
+    padding: .5em 1em .5em 0;
+    flex: 1;
 }
 
-.inputContainer {
-    width: 30vw;
-    height: 4vh;
-    background: #8080804d;
-    border: none;
-    border-radius: 5px;
+.userContainer>input {
+    flex: 2;
 }
 
-.label1 {
-    margin-right: 10px;
-    color: grey;
+.userContainer>input,
+.userContainer>button {
+    padding: .5em;
 }
 
 .btnContainer {
-    flex-direction: column;
-    margin-top: 27px;
-    display: flex;
     border-radius: 5px;
+    margin-top: 27px;
+    text-align: center;
 }
 
 .button {
-    width: 20rem;
+    width: 8rem;
     height: 2rem;
     background: #00b8ff87;
     border: none;
     border-radius: 5px;
-    margin-left: 5rem;
     color: white;
     font-size: larger;
     border: none;
-}
-
-.imgContainer {
-    margin-left: -2rem;
 }
